--- a/ui/base/ui.html
+++ b/ui/base/ui.html
@@ -159,23 +159,23 @@ body {
 	</div>
 
 	<div class="tab-contents">
-		<div class="tab-content" data-content-for="tab1">
+		<div class="tab-content" data-content-for="tab1" id="content-profile">
 			<h2>Profile Content</h2>
 			<p>This is the content for the Profile tab.</p>
 		</div>
-		<div class="tab-content" data-content-for="tab2">
+		<div class="tab-content" data-content-for="tab2" id="content-gigs">
 			<h2>Gigs Content</h2>
 			<p>This is the content for the Gigs tab.</p>
 		</div>
-		<div class="tab-content" data-content-for="tab3">
+		<div class="tab-content" data-content-for="tab3" id="content-search">
 			<h2>Search Content</h2>
 			<p>This is the content for the Search tab.</p>
 		</div>
-		<div class="tab-content" data-content-for="tab4">
+		<div class="tab-content" data-content-for="tab4" id="content-chat">
 			<h2>Chat Content</h2>
 			<p>This is the content for the Chat tab.</p>
 		</div>
-		<div class="tab-content" data-content-for="tab5">
+		<div class="tab-content" data-content-for="tab5" id="content-people">
 			<h2>People Content</h2>
 			<p>This is the content for the People tab.</p>
 		</div>
